crates/wdl-engine/tests/tasks/task-variable/error.txt
error: the `task` variable does not have a member named `meta`
   ┌─ tests/tasks/task-variable/source.wdl:11:36
   │
11 │     echo "Task description: ~{task.meta.description}"
   │                                    ^^^^

